--- a/Histogram_Equalisation.ipynb
+++ b/Histogram_Equalisation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "id": "b88c7338",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "id": "47acb0ab",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b684b41a",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "4005d049",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "12873e4b",
    "metadata": {},
    "outputs": [],
@@ -89,10 +89,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "b0680c30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\manav\\appdata\\local\\programs\\python\\python39\\lib\\site-packages\\skimage\\_shared\\utils.py:338: UserWarning: This might be a color image. The histogram will be computed on the flattened image. You can instead apply this function to each color channel, or set channel_axis.\n",
+      "  return func(*args, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "# for i in range(0,len(totalImages)):\n",
     "for i in range(0,10):\n",
@@ -103,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "30a8a291-2361-4e75-a4a5-57cf293bdee6",
    "metadata": {},
    "outputs": [],
@@ -113,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "46cd1d4e-1f89-40a8-88a6-e5d2bcb695c5",
    "metadata": {},
    "outputs": [],
@@ -125,14 +134,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "943ae708-3d6e-41f2-9ed2-885a22f50b1c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from fastai.conv_learner import *\n",
-    "# from fastai.dataset import *\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
@@ -142,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "8416e98c-4dd7-42e6-9cc8-dc61b22e24c2",
    "metadata": {},
    "outputs": [],
@@ -155,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "97cc516c-78bc-4d4b-bc82-3bfa8059ae79",
    "metadata": {},
    "outputs": [],
@@ -167,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "2bd8fa93-564c-44b9-830d-f149f9a59311",
    "metadata": {},
    "outputs": [
@@ -191,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "7f858602-0492-4567-bf6c-7c4ae69a3e26",
    "metadata": {},
    "outputs": [
@@ -210,19 +216,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 32,
    "id": "d0c5d7f7-0aac-45c4-9f35-abdb6dd251aa",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<AxesSubplot:>"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "768 768\n"
+     ]
     },
     {
      "data": {
@@ -250,16 +253,19 @@
     "mask_img = np.zeros((shape[0]*shape[1],1), dtype=int)\n",
     "mask_img[rle_mask_pixels] = 255\n",
     "l,b=cv.imread(\"./train_v2/{}\".format(file)).shape[0], cv.imread(\"./train_v2/{}\".format(file)).shape[1]\n",
-    "\n",
+    "print(l,b)\n",
     "mask = np.reshape(mask_img, (b, l)).T\n",
     "msk = PILImage.create(mask)\n",
     "# plt.imshow(mask)\n",
-    "msk.show()"
+    "msk.show()\n",
+    "newSize=(128,128)\n",
+    "msk1=msk.resize(newSize)\n",
+    "msk1.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 15,
    "id": "f8ec6764-0684-4488-a977-0bb90d73e2b5",
    "metadata": {},
    "outputs": [],
@@ -270,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 16,
    "id": "d7d53e95-b08c-40c6-830f-5edcf079d1db",
    "metadata": {},
    "outputs": [],
@@ -292,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "aa5be10b-ce8c-4a2f-8128-2356b429e39c",
    "metadata": {},
    "outputs": [],
@@ -303,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "2d9ba973-56cd-4be4-ab68-5ded198a2ec1",
    "metadata": {},
    "outputs": [],
