--- a/unet-Model.ipynb
+++ b/unet-Model.ipynb
@@ -36,12 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import segmentation_models as sm\n",
     "from segmentation_models import Unet\n",
-    "# from segmentation_models.backbones import get_preprocessing\n",
+    "from segmentation_models import get_preprocessing\n",
     "from segmentation_models.losses import bce_jaccard_loss\n",
     "from segmentation_models.metrics import iou_score\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -102,22 +103,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "im=PILImage.create(\"./train_v2/{}\".format(tr_n[0]))\n",
     "newSize=(128,128)\n",
     "im1 = im.resize(newSize)\n",
-    "im1.show()"
+    "# im1.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tf.keras'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sm.set_framework('tf.keras')\n",
+    "sm.framework()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "backbone = 'resnet34'\n",
+    "preprocess_input = get_preprocessing(backbone)\n"
+   ]
   },
   {
    "cell_type": "code",
