--- a/Histogram_Equalisation.ipynb
+++ b/Histogram_Equalisation.ipynb
@@ -260,7 +260,7 @@
     "msk.show()\n",
     "newSize=(128,128)\n",
     "msk1=msk.resize(newSize)\n",
-    "msk1.show()"
+    "# msk1.show()"
    ]
   },
   {
